--- a/{{ cookiecutter.project_slug }}/frontend/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base.html
@@ -33,7 +33,7 @@
   <meta name="twitter:site" content="@rasulkireev" />
   <meta name="twitter:title" content="{{ cookiecutter.project_name }}" />
   <meta name="twitter:description" content="{{ cookiecutter.project_description }}" />
-  <meta name="twitter:image" content="https://osig.app/g?site=meta&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
+  <meta name="twitter:image" content="https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
   {{ "{% endblock meta %}" }}
 
   {{ "{% stylesheet_pack 'index' %}" }}
@@ -248,7 +248,7 @@
       "@type": "WebSite",
       "name": "{{ cookiecutter.project_name }}",
       "description": "{{ cookiecutter.project_description }}",
-      "thumbnailUrl": "https://osig.app/g?site=meta&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %},
+      "thumbnailUrl": "https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %},
       "url": "https://{{ '{{ request.get_host }}' }}/",
       "author": {
         "@type": "Person",
