--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
@@ -1,7 +1,7 @@
 {{ "{% extends "base.html" %}" }}
 {{ "{% load webpack_loader static %}" }}
 
-{% block meta %}
+{{ "{% block meta %}" }}
     <title>Technologies We Use | {{ cookiecutter.project_name }}</title>
     <meta name="description" content="Technologies and Tools Used by {{ cookiecutter.project_name }}" />
     <meta name="keywords" content="{{ cookiecutter.project_name }}, Technology Stack, Web Development" />
@@ -12,20 +12,22 @@
     <meta property="og:url" content="https://{% raw %}{{ request.get_host }}{% endraw %}/uses" />
     <meta property="og:description" content="Technologies and Tools Used by {{ cookiecutter.project_name }}" />
     <meta property="og:locale" content="en_US" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@rasulkireev" />
     <meta name="twitter:site" content="@rasulkireev" />
     <meta name="twitter:title" content="Technologies We Use | {{ cookiecutter.project_name }}" />
     <meta name="twitter:description" content="Technologies and Tools Used by {{ cookiecutter.project_name }}" />
     <meta name="twitter:image" content="https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle=Tech we use&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}" />
-{% endblock meta %}
+{{ "{% endblock meta %}" }}
 
-{% block content %}
+{{ "{% block content %}" }}
     <div class="container px-4 py-8 mx-auto prose">
-        <h1>Technologies We Use</h1>
-
-        <p>At {{ cookiecutter.project_name }}, we leverage a variety of modern technologies and tools to provide you with the best possible experience. Here's an overview of the key technologies that power our platform:</p>
-
+        <h1>Tech I Use</h1>
+        <p>
+          I run
+          <a href="https://www.rasulkireev.com/projects">multiple projects</a>
+          at the same time and using reliable and simple tech is the key to running everything smoothly. Here's what I use:
+        </p>
         <ul>
             <li><strong><a href="https://sentry.io/" target="_blank" rel="noopener noreferrer">Sentry</a>:</strong> For error tracking and performance monitoring, ensuring a smooth user experience.</li>
             <li><strong><a href="https://hetzner.cloud/?ref=Ju1ttKSG0Fn7" target="_blank" rel="noopener noreferrer">Hetzner</a>:</strong> Our cloud infrastructure provider, hosting our servers and services.</li>
@@ -40,11 +42,8 @@
             <li><strong><a href="https://replicate.com/" target="_blank" rel="noopener noreferrer">Replicate</a>:</strong> For AI model deployment and management.</li>
             <li><strong><a href="https://opentelemetry.io/" target="_blank" rel="noopener noreferrer">OpenTelemetry</a>:</strong> Providing observability into our application's performance and behavior.</li>
             <li><strong><a href="https://stimulus.hotwired.dev/" target="_blank" rel="noopener noreferrer">StimulusJS</a>:</strong> A modest JavaScript framework for the "sprinkles of interactivity" in our frontend.</li>
-            <li><strong><a href="http://whitenoise.evans.io/" target="_blank" rel="noopener noreferrer">WhiteNoise</a>:</strong> For efficient serving of static files.</li>
+            <li><strong><a href="https://whitenoise.evans.io/" target="_blank" rel="noopener noreferrer">WhiteNoise</a>:</strong> For efficient serving of static files.</li>
         </ul>
-
-        <p>This technology stack allows us to deliver a fast, reliable, and feature-rich platform to help you on your {{ cookiecutter.project_name }} journey. We're constantly evaluating and updating our tools to ensure we're using the best technologies available.</p>
-
-        <p>If you have any questions about our technology choices or are interested in learning more, feel free to contact us at <a href="mailto:rasul@lvtd.dev">rasul@lvtd.dev</a>.</p>
+        <p>If you have any questions about our technology choices or are interested in learning more, feel free to contact us at <a href="mailto:rasul@builtwithdjango.com">contact@builtwithdjango.com</a>.</p>
     </div>
-{% endblock content %}
+{{ "{% endblock content %}" }}
