--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
@@ -1,4 +1,4 @@
-{{ "{% extends "base.html" %}" }}
+{{ '{% extends "base.html" %}' }}
 {{ "{% load webpack_loader static %}" }}
 
 {{ "{% block meta %}" }}
