--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
@@ -88,6 +88,7 @@
                 <button type="submit" class="inline-flex justify-center px-4 py-2 text-sm font-medium text-white bg-{{ cookiecutter.project_main_color }}-600 rounded-md border border-transparent shadow-sm hover:bg-{{ cookiecutter.project_main_color }}-700 focus:outline-none focus:ring-2 focus:ring-{{ cookiecutter.project_main_color }}-500 focus:ring-offset-2">
                   Save Changes
                 </button>
+              </div>
             </div>
           </form>
         </div>
