--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
@@ -40,9 +40,9 @@
             <li><strong><a href="https://www.postgresql.org/" target="_blank" rel="noopener noreferrer">PostgreSQL</a>:</strong> Our primary relational database management system.</li>
             <li><strong><a href="https://www.anthropic.com/" target="_blank" rel="noopener noreferrer">Anthropic</a>:</strong> Leveraging AI capabilities to enhance our services.</li>
             <li><strong><a href="https://replicate.com/" target="_blank" rel="noopener noreferrer">Replicate</a>:</strong> For AI model deployment and management.</li>
-            <li><strong><a href="https://opentelemetry.io/" target="_blank" rel="noopener noreferrer">OpenTelemetry</a>:</strong> Providing observability into our application's performance and behavior.</li>
             <li><strong><a href="https://stimulus.hotwired.dev/" target="_blank" rel="noopener noreferrer">StimulusJS</a>:</strong> A modest JavaScript framework for the "sprinkles of interactivity" in our frontend.</li>
             <li><strong><a href="https://whitenoise.evans.io/" target="_blank" rel="noopener noreferrer">WhiteNoise</a>:</strong> For efficient serving of static files.</li>
+            <li><strong><a href="https://logfire.pydantic.dev/" target="_blank" rel="noopener noreferrer">Logfire</a>:</strong> For all my logging needs.</li>
         </ul>
         <p>If you have any questions about our technology choices or are interested in learning more, feel free to contact us at <a href="mailto:rasul@builtwithdjango.com">contact@builtwithdjango.com</a>.</p>
     </div>
