--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/home.html
@@ -19,6 +19,7 @@
   </div>
 </div>
 
+{% if cookiecutter.use_stripe == 'y' -%}
 {{ "{% if show_confetti %}" }}
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script>
@@ -31,3 +32,4 @@
 {{ "{% endif %}" }}
 
 {{ "{% endblock content %}" }}
+{% endif %}
