add article body to shcema

--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
@@ -60,6 +60,7 @@
         "url": "{% raw %}https://{{ request.get_host }}{% static 'vendors/images/logo.png' %}{%- endraw %}"
       }
     },
+    "articleBody": "{% raw %}{{ blog_post.content|safe|replace_quotes }}{% endraw %}",
     "mainEntityOfPage": {
       "@type": "WebPage",
       "@id": "https://{% raw %}{{ request.get_host }}{{ blog_post.get_absolute_url }}{% endraw %}"
