--- a/{{ cookiecutter.project_slug }}/frontend/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base.html
@@ -253,7 +253,7 @@
       "@type": "WebSite",
       "name": "{{ cookiecutter.project_name }}",
       "description": "{{ cookiecutter.project_description }}",
-      "thumbnailUrl": "https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %},
+      "thumbnailUrl": "https://osig.app/g?site=x&style=logo&font=markerfelt&title={{ cookiecutter.project_name }}&subtitle={{ cookiecutter.project_description }}&image_url=https://{{ '{{ request.get_host }}' }}{% raw %}{% static 'vendors/images/logo.png' %}{%- endraw %}",
       "url": "https://{{ '{{ request.get_host }}' }}/",
       "author": {
         "@type": "Person",
