--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
@@ -1,4 +1,4 @@
-{{ "{% extends 'base.html' %}" }}
+{{ "{% extends 'base_landing.html' %}" }}
 {{ "{% load widget_tweaks %}" }}
 {{ "{% load socialaccount %}" }}
 
