--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/logout.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/logout.html
@@ -1,4 +1,4 @@
-{{ "{% extends 'base.html' %}" }}
+{{ "{% extends 'base_app.html' %}" }}
 {{ "{% load widget_tweaks %}" }}
 
 {{ "{% block content %}" }}
