--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
@@ -1,4 +1,4 @@
-{{ '{% extends "base.html" %}' }}
+{{ '{% extends "base_landing.html" %}' }}
 {{ '{% load webpack_loader static %}' }}
 {{ '{% load markdown_extras %}' }}
 
