--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/user-settings.html
@@ -1,4 +1,4 @@
-{{ "{% extends 'base.html' %}" }}
+{{ "{% extends 'base_app.html' %}" }}
 {{ "{% load webpack_loader static %}" }}
 {{ "{% load widget_tweaks %}" }}
 
@@ -40,26 +40,17 @@
         </div>
       </div>
     </div>
-    {{ "{% else %}" }}
-    <div class="p-6 mt-6 mb-8 bg-gray-50 rounded-lg">
-      <h3 class="mb-4 text-lg font-medium leading-6 text-gray-900">Manage Your Subscription</h3>
-      <div class="rounded-md shadow">
-        <a
-          href="{% raw %}{% url 'create_customer_portal_session' %}{%- endraw %}"
-          class="flex justify-center items-center px-5 py-3 text-base font-medium text-white bg-{{ cookiecutter.project_main_color }}-600 rounded-md border border-transparent hover:bg-{{ cookiecutter.project_main_color }}-700">
-          Update Subscription
-        </a>
-      </div>
-    </div>
     {{ "{% endif %}" }}
     {% endif %}
 
-    <div class="px-6 py-4">
-      <div class="flex flex-col">
-        <h3 class="mb-6 text-lg font-medium leading-6 text-gray-900">Personal Information</h3>
-        <div class="mt-5 md:mt-0">
-          <form action="" method="post">
-            {{ "{% csrf_token %}" }}
+
+    <form id="settings-form" action="" method="post">
+      {{ "{% csrf_token %}" }}
+
+      <div class="px-6 py-4">
+        <div class="flex flex-col">
+          <h3 class="mb-6 text-lg font-medium leading-6 text-gray-900">Personal Information</h3>
+          <div class="mt-5 md:mt-0">
             <div class="overflow-hidden sm:rounded-md">
               <div class="px-2 py-5">
                 <div class="grid grid-cols-6 gap-6">
@@ -75,30 +66,27 @@
                     <label for="{% raw %}{{ form.last_name.id_for_label }}{%- endraw %}" class="block text-sm font-medium text-gray-700">Last name</label>
                     {{ '{% render_field form.last_name id="last-name" name="last-name" type="text" autocomplete="family-name" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-{{ cookiecutter.project_main_color }}-500 focus:ring-{{ cookiecutter.project_main_color }}-500 sm:text-sm" %}' }}
                   </div>
-
-                  <div class="col-span-6">
-                    {{ "{{ form.email.errors | safe }}" }}
-                    <label for="{% raw %}{{ form.email.id_for_label }}{%- endraw %}" class="block text-sm font-medium text-gray-700">Email address</label>
-                    {{ '{% render_field form.email id="email-address" name="email-address" type="email" autocomplete="email" class="block mt-1 w-full rounded-md border-gray-300 shadow-sm focus:border-{{ cookiecutter.project_main_color }}-500 focus:ring-{{ cookiecutter.project_main_color }}-500 sm:text-sm" %}' }}
-                  </div>
                 </div>
               </div>
-              <div class="mt-6 text-right">
-                <button type="submit" class="inline-flex justify-center px-4 py-2 text-sm font-medium text-white bg-{{ cookiecutter.project_main_color }}-600 rounded-md border border-transparent shadow-sm hover:bg-{{ cookiecutter.project_main_color }}-700 focus:outline-none focus:ring-2 focus:ring-{{ cookiecutter.project_main_color }}-500 focus:ring-offset-2">
-                  Save Changes
-                </button>
-              </div>
             </div>
-          </form>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="block" aria-hidden="true">
-      <div class="py-5">
-        <div class="border-t border-gray-200"></div>
+      <div class="block" aria-hidden="true">
+        <div class="py-5">
+          <div class="border-t border-gray-200"></div>
+        </div>
       </div>
-    </div>
+
+      <div class="px-6 py-4">
+        <div class="mt-6 text-right">
+          <button type="submit" class="inline-flex justify-center px-4 py-2 text-sm font-medium text-white bg-{{ cookiecutter.project_main_color }}-600 rounded-md border border-transparent shadow-sm hover:bg-{{ cookiecutter.project_main_color }}-700 focus:outline-none focus:ring-2 focus:ring-{{ cookiecutter.project_main_color }}-500 focus:ring-offset-2">
+            Save Changes
+          </button>
+        </div>
+      </div>
+    </form>
 
   </div>
 {{ "{% endblock content %}" }}
