--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/email/email_confirmation_signup_message.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/email/email_confirmation_signup_message.html
@@ -1,7 +1,8 @@
 {% if cookiecutter.use_mjml == 'y' -%}
-{{ '{% load mjml %}' }}
 {{ "{% block subject %}" }}Welcome to {{ cookiecutter.project_name }}! Please Confirm Your Email{{ "{% endblock %}" }}
 
+{% raw %}{% if mjml_url %}{% endraw %}
+{{ '{% load mjml %}' }}
 {{ '{% mjml %}' }}
 <mjml>
   <mj-head>
@@ -182,6 +183,29 @@
   </mj-body>
 </mjml>
 {{ '{% endmjml %}' }}
+{% raw %}{% else %}{% endraw %}
+Welcome to {{ cookiecutter.project_name }}! 🎉
+
+Hi there,
+
+Thanks for signing up! We're excited to have you on board.
+
+To get started and unlock all features, please confirm your email address by clicking this link:
+
+{% raw %}{{ activate_url }}{% endraw %}
+
+What's next?
+
+✨ Complete your profile
+🚀 Explore the dashboard
+💡 Check out our getting started guide
+
+If you didn't create an account with {{ cookiecutter.project_name }}, you can safely ignore this email.
+
+---
+This email was sent by {{ cookiecutter.project_name }}
+© {{ "{% now 'Y' %}" }} {{ cookiecutter.project_name }}. All rights reserved.
+{% raw %}{% endif %}{% endraw %}
 {% else -%}
 {{ "{% block subject %}" }}Welcome to {{ cookiecutter.project_name }}! Please Confirm Your Email{{ "{% endblock %}" }}
 
